--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
     background-color: #232323;
+    margin: 0;
+    font-family: "Monserrat", "avenir";
 }
 
 .container {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 30px auto;
 }
 
 .square {
@@ -13,10 +15,28 @@ body {
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 5%;
+    transition: background 0.5s;
 }
 
 h1 {
+    text-align: center;
+    line-height: 1.1;
     color: white;
+    background-color: steelblue; 
+    margin: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    padding: 20px 0;
+}
+
+#colorDisplay {
+    font-size: 200%;
+}
+
+#message {
+    display: inline-block;
+    width: 20%;
 }
 
 #stripe {
@@ -26,5 +46,24 @@ h1 {
 }
 
 .selected {
-    background-color: blue;
+    color: white;
+    background-color: steelblue;
+}
+
+button {
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    color: steelblue;
+    letter-spacing: 1.2px;
+    font-size: inherit;
+    transition: all 0.3s;
+    outline: none;
+}
+
+button:hover {
+    color: white;
+    background: steelblue;
 }
