--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
     margin: 1.66%;
     border-radius: 5%;
     transition: background 0.5s;
+    -webkit-transition: background 0.5s;
+    -moz-transition: background 0.5s;
 }
 
 h1 {
@@ -60,6 +62,8 @@ button {
     letter-spacing: 1.2px;
     font-size: inherit;
     transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
     outline: none;
 }
 
